Make flatpak build off of Avalonia

--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -63,7 +63,7 @@ modules:
     sources:
       - type: git
         url: https://github.com/haroohie-club/SerialLoops.git
-        branch: AvaloniaInstallations
+        branch: Avalonia
       - ./nuget-sources.json
       - type: patch
         path: patches/sandbox.patch
