--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,8 +9,6 @@ on:
       - 'main'
       - 'Avalonia'
 
-env:
-  ROM_URI: ${{ secrets.CHOKU_ROM_URI }}
 
 jobs:
   build_test:
@@ -26,6 +24,7 @@ jobs:
           - os: windows-latest
             targetFramework: net8.0-windows
             container: ''
+    environment: SerialLoops
     runs-on: ${{ matrix.platform.os }}
     container: ${{ matrix.platform.container }}
     steps:
@@ -39,3 +38,5 @@ jobs:
         run: dotnet build src/SerialLoops/SerialLoops.csproj -f ${{ matrix.platform.targetFramework }}
       - name: Run tests
         run: dotnet test test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj -f ${{ matrix.platform.targetFramework }}
+        env:
+          ROM_URI: ${{ secrets.CHOKU_ROM_URI }}
