--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -40,4 +40,4 @@ jobs:
       - name: Run tests
         run: dotnet test test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj -f ${{ matrix.platform.targetFramework }}
         env:
-          ROM_URI: ${{ secrets.GITHUB_TOKEN }}
+          ROM_URI: ${{ secrets.CHOKU_ROM_URI }}
