Handle nullables in SerialLoops.Lib

--- a/test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj
+++ b/test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net8.0;net8.0-windows</TargetFrameworks>
     <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
