--- a/.editorconfig
+++ b/.editorconfig
@@ -88,6 +88,7 @@ csharp_prefer_static_local_function = true:suggestion
 csharp_prefer_simple_using_statement = false:none
 csharp_style_prefer_switch_expression = true:suggestion
 dotnet_style_readonly_field = true:suggestion
+csharp_object_creation_when_type_evident = target_typed
 
 # Expression-level preferences
 dotnet_style_object_initializer = true:suggestion
