--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Run tests
         run: dotnet test test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj -f ${{ matrix.platform.targetFramework }}
         env:
-          ROM_URI: ${{ secrets.CHOKU_ROM_URI }}
+          ROM_URI: ${{ vars.CHOKU_ROM_URI }}
