--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,26 +20,16 @@ jobs:
       Windows:
         imageName: 'windows-latest'
         targetFramework: 'net8.0-windows'
-  displayName: Build & Test
+  displayName: Build Validation
   pool:
     vmImage: $(imageName)
   steps:
   - checkout: self
     clean: true
-    
+
   - task: DotNetCoreCLI@2
     inputs:
       command: 'build'
       projects: $(Build.SourcesDirectory)/src/SerialLoops/SerialLoops.csproj
       arguments: -f $(targetFramework)
     displayName: Build project
-
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: 'test'
-      projects: $(Build.SourcesDirectory)/test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj
-      arguments: -f $(targetFramework)
-      publishTestResults: true
-    env:
-      ROM_URI: $(ChokuRomUri)
-    displayName: Run tests
