--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,10 +1,7 @@
 name: Serial Loops PR
 run-name: PR for ${{ github.actor }} - ${{ github.ref_name }}
 on:
-  pull_request:
-    types:
-      - opened
-      - reopened
+  push:
     branches:
       - 'main'
       - 'Avalonia'
