Add HARUHI_METER command editor

--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <None Remove="Assets\MacIcon.icns" />
     <None Remove="Assets\serial-loops.ico" />
+    <None Remove="Views\Editors\ScriptCommandEditors\HaruhiMeterScriptCommandEditorView.axaml~" />
   </ItemGroup>
 
   <ItemGroup>
