--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,15 +14,12 @@ jobs:
       Linux:
         imageName: 'ubuntu-latest'
         targetFramework: 'net8.0'
-        testArguments: --filter ""
       macOS:
         imageName: 'macOS-latest'
         targetFramework: 'net8.0'
-        testArguments: --filter ""
       Windows:
         imageName: 'windows-latest'
         targetFramework: 'net8.0-windows'
-        testArguments: --filter "Name !~ BackgroundMusicEditor"
   displayName: Build & Test
   pool:
     vmImage: $(imageName)
@@ -46,7 +43,7 @@ jobs:
     inputs:
       command: 'test'
       projects: $(Build.SourcesDirectory)/test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj
-      arguments: -f $(targetFramework) $(testArguments)
+      arguments: -f $(targetFramework)
       publishTestResults: true
     env:
       ASSETS_DIRECTORY: $(Build.ArtifactStagingDirectory)/test-assets/
