Add WSL to the Windows installer (#416)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,14 @@
 name: Serial Loops PR
 run-name: PR for ${{ github.actor }} - ${{ github.ref_name }}
 on:
-  pull_request:
-    types:
-      - opened
-      - reopened
+  push:
     branches:
       - 'main'
       - 'Avalonia'
 
 jobs:
   build_test:
+    if: github.repository == 'haroohie-club'
     strategy:
       matrix:
         platform:
