--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <None Remove="Assets\MacIcon.icns" />
     <None Remove="Assets\serial-loops.ico" />
+    <None Remove="Views\Editors\ScriptCommandEditors\HaruhiMeterScriptCommandEditorView.axaml~" />
   </ItemGroup>
 
   <ItemGroup>
@@ -66,6 +67,7 @@
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.0" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.0" />
+    <!--The behaviors packages past 11.1.0.4 break our middle click to close functionality, so we're staying on that package for now.-->
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.1.0.4" />
     <PackageReference Include="BinToss.GroupBox.Avalonia" Version="1.0.0" />
     <PackageReference Include="DialogHost.Avalonia" Version="0.8.1" />
@@ -76,7 +78,7 @@
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
     <PackageReference Include="SixLabors.Fonts" Version="2.0.6" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
-    <PackageReference Include="Tabalonia" Version="0.10.4.1" />
+    <PackageReference Include="Tabalonia" Version="0.10.4.2" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
