--- a/src/SerialLoops.Lib/SerialLoops.Lib.csproj
+++ b/src/SerialLoops.Lib/SerialLoops.Lib.csproj
@@ -14,11 +14,12 @@
     <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="7.3.0.3" />
     <PackageReference Include="HaruhiChokuretsuLib" Version="0.45.2" />
     <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
-    <PackageReference Include="NitroPacker.Core" Version="2.5.1" />
+    <PackageReference Include="NitroPacker.Core" Version="2.6.0" />
     <PackageReference Include="NLayer" Version="1.16.0" />
     <PackageReference Include="NLayer.NAudioSupport" Version="1.4.0" />
     <PackageReference Include="QuikGraph" Version="2.5.0" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
+    <PackageReference Include="SoftCircuits.OrderedDictionary" Version="3.2.0" />
     <PackageReference Include="Topten.RichTextKit" Version="0.4.167" />
     <PackageReference Include="VCDiff" Version="4.0.1" />
   </ItemGroup>
