--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -55,6 +55,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.2" />
+    <PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.1.5" />
     <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.0.10" />
     <PackageReference Include="Avalonia.Controls.ColorPicker" Version="11.2.2" />
     <PackageReference Include="Avalonia.Desktop" Version="11.2.2" />
