Revert "Remove save editor component"
This reverts commit bf4278dd3a5ecbd70c8df1609f894b33c94b8aaf.

--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -118,6 +118,10 @@
       <DependentUpon>ItemReferencesDialog.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\Editors\SaveEditorView.axaml.cs">
+      <DependentUpon>SaveEditorView.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
