--- a/install/linux/flatpak/club.haroohie.SerialLoops.desktop
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Version=1.0
+Version=#VERSION#
 Name=Serial Loops
 Comment=Editor for Suzumiya Haruhi no Chokuretsu
 Exec=SerialLoops
