--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -95,7 +95,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: appimagecrafters/appimage-builder:latest
-          options: -v ${{ github.workspace }}:/work -e "SLVersion" -e "SLAssemblyVersion"
+          options: -v ${{ github.workspace }}:/work -w /work -e "SLVersion" -e "SLAssemblyVersion"
           run: appimage-builder --recipe=./install/linux/appimage/AppImageBuilder.yml --skip-tests
       - name: Upload AppImage
         uses: actions/upload-artifact@v4
