--- a/install/linux/appimage/AppImageBuilder.yml
+++ b/install/linux/appimage/AppImageBuilder.yml
@@ -58,5 +58,6 @@ AppDir:
       use_host_x: true
 AppImage:
   arch: x86_64
+  comp: gzip
   update-information: guess
   file_name: SerialLoops.AppImage
