Switch to PortAudio for *nix audio processing

--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -296,4 +296,4 @@ jobs:
             If you would rather manually install, follow the below instructions:
             * The `.deb` package is intended for Debian-based distros (e.g. Ubuntu). Install it with `sudo apt install -f ./SerialLoops-linux-x64-${{ env.SLVersion }}.deb`.
             * The `.rpm` package is intended for Red Hat distros (e.g. Fedora). Install it with `sudo dnf install ./SerialLoops-linux-x64-${{ env.SLVersion }}-1.fc39.x86_64.rpm`.
-            * For other Linux distros, please use the binaries packaged in the `.tar.gz` archive; when doing so, ensure you install the OpenAL binaries so audio playback works.
+            * For other Linux distros, please use the binaries packaged in the `.tar.gz` archive; when doing so, ensure you install the PortAudio binaries so audio playback works.
