Adjust macOS build

--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -12,6 +12,10 @@
     <ApplicationIcon>Assets\serial-loops.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$([System.OperatingSystem]::IsMacOS()) And !Exists('$(OutDir)runtimes/osx/native/libportaudio.dylib')">
+    <Exec Command="/bin/bash -C install-portaudio-macos.sh ../src/SerialLoops/$(OutDir)runtimes/osx/native/" WorkingDirectory="../.."/>
+  </Target>
+
   <PropertyGroup>
     <CFBundleName>Serial Loops</CFBundleName>
     <!-- Also defines .app file name -->
