--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -166,12 +166,12 @@ jobs:
         with:
           python-version: '3.13'
       - run: pip install macos-pkg-builder
+      - name: Copy in portaudio
+        run: cp -L ${{ github.workspace }}/portaudio/libportaudio.dylib "src/SerialLoops/libportaudio.dylib"
       - name: Restore
         run: dotnet restore src/SerialLoops/SerialLoops.csproj -r ${{ matrix.type.rid }}
       - name: Build .app
-        run: dotnet msbuild src/SerialLoops/SerialLoops.csproj -t:BundleApp -p:Configuration=Release -p:TargetFramework=net8.0 -p:RuntimeIdentifier=${{ matrix.type.rid }} -p:UseAppHost=true -p:SelfContained=true -p:DebugType=None -p:DebugSymbols=false -p:PublishSingleFile=true /p:CIBuild=true
-      - name: Copy in portaudio
-        run: cp -L ${{ github.workspace }}/portaudio/libportaudio.dylib "src/SerialLoops/bin/Release/net8.0/${{ matrix.type.rid }}/publish/Serial Loops.app/Contents/MacOS/libportaudio.dylib"
+        run: dotnet msbuild src/SerialLoops/SerialLoops.csproj -t:BundleApp -p:Configuration=Release -p:TargetFramework=net8.0 -p:RuntimeIdentifier=${{ matrix.type.rid }} -p:UseAppHost=true -p:SelfContained=true -p:DebugType=None -p:DebugSymbols=false -p:PublishSingleFile=true -p:CIBuild=true
       - name: Build pkg installer
         run: |
           mkdir "install/macos/Serial Loops.app"
