--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -12,15 +12,15 @@
     <ApplicationIcon>Assets\serial-loops.ico</ApplicationIcon>
   </PropertyGroup>
 
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="$([System.OperatingSystem]::IsMacOS()) And !Exists('libportaudio.dylib') And '$(CIBuild)' != 'true'">
-    <Exec Command="/bin/bash -C install-portaudio-macos.sh ../src/SerialLoops/libportaudio.dylib $(rid)" WorkingDirectory="../.."/>
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="$([System.OperatingSystem]::IsMacOS()) And !Exists('libSDL2.dylib') And '$(CIBuild)' != 'true'">
+    <Exec Command="/bin/bash -C install-sdl-macos.sh ../src/SerialLoops/libSDL2.dylib" WorkingDirectory="../.."/>
   </Target>
   <ItemGroup Condition="$([System.OperatingSystem]::IsMacOS())">
-    <None Include="libportaudio.dylib">
-      <TargetPath>runtimes/osx/native/libportaudio.dylib</TargetPath>
+    <None Include="libSDL2.dylib">
+      <TargetPath>runtimes/osx/native/libSDL2.dylib</TargetPath>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="libportaudio.dylib">
+    <None Include="libSDL2.dylib">
       <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </None>
   </ItemGroup>
@@ -104,6 +104,7 @@
   <ItemGroup Condition="'$(TargetFramework)' != 'net8.0-windows'">
     <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
     <PackageReference Include="PortAudioSharp" Version="0.3.0" />
+    <PackageReference Include="NAudio.Sdl2" Version="2.2.6" />
   </ItemGroup>
 
   <ItemGroup>
